[package]
name = "keystamp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentimestamps = "0.1.0"
nostr = "0.24.0"
tokio = { version = "1.28", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
tower-http = { version = "0.4", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
dotenv = "0.15"
tower = "0.4"
hyper = { version = "0.14", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
tokio-retry = "0.3"
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
